--- a/app/src/main/res/layout/adapter_character.xml
+++ b/app/src/main/res/layout/adapter_character.xml
@@ -1,74 +1,85 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:padding="8dp">
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <com.google.android.material.card.MaterialCardView
-        android:id="@+id/cvCardView"
+    <data>
+        <variable
+            name="character"
+            type="com.petrocini.rickandmorty.domain.model.Character" />
+    </data>
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:cardBackgroundColor="#202020"
-        app:cardCornerRadius="14dp">
+        android:padding="8dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/cvCardView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:padding="12dp">
+            android:layout_height="wrap_content"
+            app:cardBackgroundColor="#202020"
+            app:cardCornerRadius="14dp">
 
-            <ImageView
-                android:id="@+id/ivImage"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:background="@drawable/rick" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:padding="12dp">
 
-            <TextView
-                android:id="@+id/tvName"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:textColor="#E4E4E4"
-                android:textSize="18sp"
-                android:textStyle="bold"
-                app:layout_constraintBottom_toTopOf="@id/tvStatus"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/ivImage"
-                app:layout_constraintTop_toTopOf="parent"
-                tools:text="Rick Sanchez" />
+                <ImageView
+                    android:id="@+id/avatar_imageview"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:background="@drawable/rick" />
 
-            <TextView
-                android:id="@+id/tvStatus"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="4dp"
-                android:textColor="#E4E4E4"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toTopOf="@id/tvSpecies"
-                app:layout_constraintStart_toEndOf="@id/ivImage"
-                app:layout_constraintTop_toBottomOf="@id/tvName"
-                tools:text="Alive" />
+                <TextView
+                    android:id="@+id/name_textview"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:textColor="#E4E4E4"
+                    android:textSize="18sp"
+                    android:textStyle="bold"
+                    android:text="@{character.name}"
+                    app:layout_constraintBottom_toTopOf="@id/status_textview"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/avatar_imageview"
+                    app:layout_constraintTop_toTopOf="parent"
+                    tools:text="Rick Sanchez" />
 
-            <TextView
-                android:id="@+id/tvSpecies"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="12dp"
-                android:layout_marginTop="4dp"
-                android:textColor="#E4E4E4"
-                android:textSize="16sp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintStart_toEndOf="@id/ivImage"
-                app:layout_constraintTop_toBottomOf="@id/tvStatus"
-                tools:text="Human" />
+                <TextView
+                    android:id="@+id/status_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="4dp"
+                    android:textColor="#E4E4E4"
+                    android:textSize="16sp"
+                    android:text="@{character.status}"
+                    app:layout_constraintBottom_toTopOf="@id/species_textview"
+                    app:layout_constraintStart_toEndOf="@id/avatar_imageview"
+                    app:layout_constraintTop_toBottomOf="@id/name_textview"
+                    tools:text="Alive" />
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                <TextView
+                    android:id="@+id/species_textview"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginStart="12dp"
+                    android:layout_marginTop="4dp"
+                    android:textColor="#E4E4E4"
+                    android:textSize="16sp"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toEndOf="@id/avatar_imageview"
+                    app:layout_constraintTop_toBottomOf="@id/status_textview"
+                    tools:text="Human" />
 
-    </com.google.android.material.card.MaterialCardView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-</LinearLayout>
+        </com.google.android.material.card.MaterialCardView>
+
+    </LinearLayout>
+</layout>
